--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,45 +17,40 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
-        <item name="colorAccent">@color/colorPrimary</item>
-        <item name="android:color">#f4c56f</item>
-        <item name="android:textColor">#FF0000</item> \\ This is for the heading and ok
-        <item name="android:textColorPrimary">#0000FF</item> \\ This is for the string
-        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MyApp.Dialog.Rounded</item>
-
-    </style>
-
-    <style name="ShapeAppearanceOverlay.MyApp.Dialog.Rounded" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">20dp</item>
-    </style>
 
     <style name="CustomAlertDialogTheme" parent="@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog">
         <item name="materialAlertDialogTitleTextStyle">@style/MyTitle_MaterialAlertDialog.MaterialComponents.Title.Text</item>
         <item name="materialAlertDialogBodyTextStyle">@style/BodyTextAppearance.MaterialComponents.Body2</item>
-        <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
-        <item name="colorSurface">#f4c56f</item>
+        <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+        <item name="colorSurface">#FFE2D9</item>
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">20dp</item>
+        <item name="cornerSizeBottomRight">20dp</item>
+        <item name="cornerSizeTopLeft">20dp</item>
+        <item name="cornerSizeBottomLeft">20dp</item>
+        <item name="android:buttonCornerRadius">50dp</item>
     </style>
-
-
-    <style name="NegativeButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
+    Widget.MaterialComponents.Button
+    <style name="PositiveButtonStyle" parent="@style/Widget.MaterialComponents.BottomAppBar.Colored">
         <item name="android:textColor">#FFFFFF</item>
-        <item name="backgroundTint">#00f</item>
+        <item name="backgroundTint">#000000</item>
+
     </style>
 
     <style name="MyTitle_MaterialAlertDialog.MaterialComponents.Title.Text" parent="@style/MaterialAlertDialog.MaterialComponents.Title.Text">
-        <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">40dp</item>
+        <item name="fontFamily">@font/blackie</item>
+        <item name="fontStyle">italic</item>
 
     </style>
 
     <style name="BodyTextAppearance.MaterialComponents.Body2" parent="@style/TextAppearance.MaterialComponents.Body2">
-        <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
-        <item name="fontFamily">sans-serif-condensed-light</item>
+        <item name="fontFamily">@font/arial</item>
     </style>
 
 </resources>
