--- a/app/src/main/res/layout/activity_robot_control.xml
+++ b/app/src/main/res/layout/activity_robot_control.xml
@@ -58,7 +58,7 @@
         android:scrollbars="vertical"
         android:text="No status yet"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.387"
@@ -244,7 +244,7 @@
         android:layout_marginTop="40dp"
         android:text="0"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/xLabelTextView"
         app:layout_constraintTop_toBottomOf="@+id/mapView" />
@@ -269,7 +269,7 @@
         android:layout_marginTop="40dp"
         android:text="0"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/yLabelTextView"
         app:layout_constraintTop_toBottomOf="@+id/mapView" />
@@ -295,7 +295,7 @@
         android:layout_marginStart="4dp"
         android:text="0"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/yLabelTextViewWP"
@@ -323,7 +323,7 @@
         android:layout_height="40dp"
         android:text="0"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/xLabelTextViewWP"
@@ -341,6 +341,7 @@
         android:text="Direction:"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/yLabelTextView"
         app:layout_constraintTop_toBottomOf="@+id/buttonF1" />
 
@@ -351,7 +352,7 @@
         android:layout_marginStart="12dp"
         android:text="None"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -529,7 +530,7 @@
         android:scrollbars="vertical"
         android:text="No sent message"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/receivedMsg"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/sentMessageLabel"
@@ -559,7 +560,7 @@
         android:scrollbars="vertical"
         android:text="No received message"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.513"
