--- a/app/src/main/res/layout/activity_robot_control.xml
+++ b/app/src/main/res/layout/activity_robot_control.xml
@@ -123,6 +123,7 @@
         android:background="@drawable/control_button_bg"
         android:hapticFeedbackEnabled="true"
         android:scaleType="fitCenter"
+        android:stateListAnimator="@drawable/smooth_shadow"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,6 +140,7 @@
         android:background="@drawable/control_button_bg"
         android:hapticFeedbackEnabled="true"
         android:scaleType="fitCenter"
+        android:stateListAnimator="@drawable/smooth_shadow"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -155,6 +157,7 @@
         android:background="@drawable/control_button_bg"
         android:hapticFeedbackEnabled="true"
         android:scaleType="fitCenter"
+        android:stateListAnimator="@drawable/smooth_shadow"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,6 +174,7 @@
         android:background="@drawable/control_button_bg"
         android:hapticFeedbackEnabled="true"
         android:scaleType="fitCenter"
+        android:stateListAnimator="@drawable/smooth_shadow"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -339,9 +343,9 @@
         android:layout_marginTop="44dp"
         android:gravity="center_horizontal"
         android:text="Direction:"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/yLabelTextView"
         app:layout_constraintTop_toBottomOf="@+id/buttonF1" />
 
