--- a/app/src/main/res/animator/update_btn.xml
+++ b/app/src/main/res/animator/update_btn.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="1000dp" />
-            <solid android:color="#DDF3D1" />
+            <solid android:color="#FFF4E2" />
             <stroke
                 android:width="1dp"
                 android:color="#000000" />
@@ -17,10 +17,10 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="1000dp" />
-            <solid android:color="#8DC26F" />
+            <solid android:color="#F2C273" />
             <stroke
                 android:width="2dip"
-                android:color="#8DC26F" />
+                android:color="#F2C273" />
             <padding
                 android:bottom="4dp"
                 android:left="4dp"
