--- a/app/src/main/res/drawable/btn_bg_manual.xml
+++ b/app/src/main/res/drawable/btn_bg_manual.xml
@@ -5,8 +5,9 @@
             <corners android:radius="1000dp" />
             <solid android:color="#FFE2D9" />
             <stroke
-                android:width="2dip"
-                android:color="#FFE2D9" />
+                android:width="1dp"
+                android:color="#000000"
+                />
             <padding
                 android:bottom="4dp"
                 android:left="4dp"
