--- a/app/src/main/res/drawable/function_btn_1.xml
+++ b/app/src/main/res/drawable/function_btn_1.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
+
         <shape android:shape="rectangle">
             <corners android:radius="1000dp" />
-            <solid android:color="#DDF3D1" />
+            <solid android:color="#AED6F1 " />
             <stroke
                 android:width="1dp"
-                android:color="#000000" />
+                android:color="#000000"
+                />
+
+
             <padding
                 android:bottom="4dp"
                 android:left="4dp"
@@ -17,10 +21,10 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="1000dp" />
-            <solid android:color="#8DC26F" />
+            <solid android:color="#F2C273" />
             <stroke
                 android:width="2dip"
-                android:color="#8DC26F" />
+                android:color="#F2C273" />
             <padding
                 android:bottom="4dp"
                 android:left="4dp"
