--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         app:layout_constraintBottom_toTopOf="@+id/title_welcome"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/title_welcome"
         android:layout_width="wrap_content"
@@ -36,7 +35,7 @@
         app:layout_constraintVertical_bias="0.124" />
 
     <Button
-        android:id="@+id/findBluetoothButton"
+        android:id="@+id/bluetooth"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_bg_auto"
@@ -101,5 +100,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.78" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
